--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,7 @@
       "source": "/api/(.*)",
       "destination": "/api/$1"
     }
-  ]
+  ],
+  "buildCommand": "",
+  "outputDirectory": "."
 }
