Complete switch to OpenRouter API with flexible model selection
✅ Features:
- OpenRouter API service with 6+ model options
- Free models: Gemini Flash 1.5, Llama 3.2 Vision
- Ultra-cheap models: Claude Haiku, GPT-4o Mini
- Premium models: GPT-4 Vision, Claude 3.5 Sonnet
- Easy model switching via environment variables
- Combined OCR + translation in single API call
- No file download issues - direct blob URL processing
- Cost tracking and model performance metrics
- Comprehensive setup documentation

🔧 Technical:
- Replace QwenAPI with OpenRouterAPI service
- Remove file download timeout issues
- Add model configuration system
- Implement automatic fallback to backup models
- Add detailed logging and cost tracking
- Update environment configuration
- Remove old Qwen service files

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
-# Qwen AI API Configuration
-# Get your API key from: https://dashscope.console.aliyun.com/
-DASHSCOPE_API_KEY=sk-your_dashscope_api_key_here
+# OpenRouter API Configuration
+# Get your API key from: https://openrouter.ai/
+OPENROUTER_API_KEY=sk-or-your_openrouter_api_key_here
+
+# Model Selection (easily swappable)
+# Free models:
+#   google/gemini-flash-1.5 (completely free)
+#   meta-llama/llama-3.2-vision (completely free)
+# Ultra-cheap models:
+#   anthropic/claude-3-haiku-vision ($0.00025/1K tokens)
+#   openai/gpt-4o-mini ($0.00015/1K tokens)
+# Premium models:
+#   openai/gpt-4-vision-preview ($0.01/1K tokens)
+#   anthropic/claude-3.5-sonnet-vision ($0.003/1K tokens)
+OPENROUTER_MODEL=google/gemini-flash-1.5
+OPENROUTER_BACKUP_MODEL=meta-llama/llama-3.2-vision
 
 # Vercel Blob Storage (automatically configured by Vercel)
 BLOB_READ_WRITE_TOKEN=your_blob_token_here
