--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "strivefit-medical-app",
   "version": "1.0.0",
   "description": "Strive & Fit medical document management system",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "dev": "vercel dev",
+    "dev": "node server.js",
     "build": "echo 'Build completed'",
-    "start": "echo 'Static site'"
+    "start": "node server.js",
+    "start:railway": "./start.sh"
   },
   "dependencies": {
-    "@vercel/blob": "^0.15.1"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "archiver": "^6.0.1",
+    "crypto": "^1.0.1"
   },
   "keywords": [
     "medical",
     "telemedicine", 
     "document-management",
     "healthcare",
-    "vercel"
+    "railway"
   ],
   "author": "Strive & Fit Co.",
   "license": "MIT"
